<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Login">

        <TextView
            android:id="@+id/txt_Login_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/txt_Login_login"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/Login_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_Login_login"
            tools:ignore="LabelFor" />

        <EditText
            android:id="@+id/Login_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:autofillHints=""
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_Email"
            tools:ignore="LabelFor" />

        <TextView
            android:id="@+id/txt_Login_Email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Login_email"
            app:layout_constraintBottom_toTopOf="@+id/Login_Email"
            app:layout_constraintStart_toStartOf="@+id/Login_Email" />

        <TextView
            android:id="@+id/txt_Login_Password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_Login_Password"
            app:layout_constraintBottom_toTopOf="@+id/Login_Password"
            app:layout_constraintStart_toStartOf="@+id/Login_Password" />

        <TextView
            android:id="@+id/txt_Login_NoAcc"
            android:layout_width="102dp"
            android:layout_height="27dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="32dp"
            android:text="@string/txt_Login_NoAcc"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/btn_Login_Remember"
            app:layout_constraintHorizontal_bias="0.323"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_Login_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/btn_Login_sign_in"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Login_Password" />

        <Button
            android:id="@+id/btn_Login_Remember"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/btn_Login_Remember"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_Login_sign_in" />

        <Button
            android:id="@+id/btn_Login_Registration"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="192dp"
            android:layout_height="33dp"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginBottom="32dp"
            android:text="@string/btn_Login_Registration"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_Login_NoAcc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>